# VST3-Effect-Meter

./: .gitignore  CMakeLists.txt  README.md
Cpp/: CMakeLists.txt
Cpp/include/: IMeterPluginView.h  IdeConsoleWriteLine.h  componentAttribute.h  componentAttributeList.h  iMeterControllerView.h  meterController.h  meterControllerIncludes.h  meterParameters.h  meterProcessor.h  meterProcessorIncludes.h  meterUIDs.h  meterVersion.h  stdafx.h
Cpp/resource/: Info.plist  plug.uidesc  resource.h
Cpp/source/: componentAttributeList.cpp  meterController.cpp  meterFactory.cpp  meterProcessor.cpp
Mac_Cocoa/: CMakeLists.txt  Info.plist
Mac_Cocoa/UI/: MeterViewController.xib  MeterWindowController.xib
Mac_Cocoa/include/: CocoaPlugView.h  MeterUI.h  MeterViewController.h  MeterWindowController.h  meterPlugViewCocoa.h  meterView.h
Mac_Cocoa/source/: CocoaPlugView.mm  MeterViewController.mm  MeterWindowController.mm  meterController.mm  meterFactory.mm  meterPlugViewCocoa.mm  meterProcessor.mm  meterView.mm
Win_MSI/: CMakeLists.txt  SetupTest.vdproj
Win_Ultralight/: CMakeLists.txt
Win_Ultralight/include/: meterPlugViewUltralightWin32.h
Win_Ultralight/source/: meterPlugViewUltralightWin32.cpp
Win_WPF/: CMakeLists.txt  MeterUserControl.xaml  UserControl1.xaml  UserControl1.xaml.cs
Win_WPF/CS_XAML/: CMakeLists.txt  MeterUserControl.xaml  MeterUserControl.xaml.cs  MeterWpfControlLibrary.csproj
Win_WPF/CS_XAML/Properties/: AssemblyInfo.cs  CMakeLists.txt  Settings.Designer.cs
Win_WPF/Cpp_CLI/: CMakeLists.txt
Win_WPF/Cpp_CLI/include/: LoadMissingDll.h  Meter_WPF_UI_CS_XAML_AnyCPU.tlb  WpfPlugView.h  meterControllerViewWin32WpfHost.h  meterControllerViewWin32WpfHostIncludes.h  meterCppClrClassLibrary.h  meterPlugViewWin32.h  meter_wpf_ui_cs_xaml_anycpu.tlh  nativeInterface.h
Win_WPF/Cpp_CLI/source/: LoadMissingDll.cpp  MeterCppClrClassLibrary.cpp  WpfPlugView.cpp  meterControllerViewWin32WpfHost.cpp  meterPlugViewWin32.cpp
Win_WPF/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Win_WPF/include/: WpfPlugView.h
Win_WPF/source/: WpfPlugView.cpp
include/: componentAttribute.h  componentAttributeList.h  componentMessage.h  meterController.h  meterControllerIncludes.h  meterIDs.h  meterParameters.h  meterProcessor.h  meterProcessorIncludes.h  meterUIDs.h  meterVersion.h
resource/: Info.plist  RCa15840  RCb03228  RDa15840  RDa19720  meter.rc  meter.uidesc  plug.aps  plug.rc  plug.uidesc
source/: ComponentAttribute.cpp  componentAttributeList.cpp  componentMessage.cpp  meterController.cpp  meterFactory.cpp  meterProcessor.cpp
